@@ -1,18 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX imagination-3.0-cflags.patch 353 RMD160 c0beb7e323a59ea4c245e8afeed4385f153cf849 SHA1 88fd0c5e3f7ae2fe3c2b5e3b85e4cdefbba9f226 SHA256 86276d31f4bc7815df8f7f68c11abd2f65719d5553d5b5d5e2d4a48a7c401607
 DIST imagination-3.0.tar.gz 3327784 RMD160 d063febdcca1c26a2a863bfef9a4957264f12f2e SHA1 b2a0c4305405dcb8ad8a0f408c7c58bbfc7ebf4e SHA256 417d8586d9c85109b87d30b9c196d63531a637cbc2ffb3c12b48a873bfcb4b1e
-EBUILD imagination-3.0-r1.ebuild 1116 RMD160 892cdd3ff970e41c3ce06f6a6d691d4776ecdf5e SHA1 4cc47f358b179ff05ca02eba9a0eaedcb26363f6 SHA256 aeb61c48e3886df979ff14d14dc85ac3ab6f40f423629d3be3d670cc3d522da3
-EBUILD imagination-3.0.ebuild 835 RMD160 496544549ce7c39c77f65ff5c372b4417517db41 SHA1 e2eb2bdffee8c6cbb32f85640ca8affd103a4559 SHA256 ffa7bde7ccff67edc392412856dfd66708eeaf5e55cf3ace9a27239d32fdece8
-MISC ChangeLog 729 RMD160 b30669385d6ab35a30ce84dd9db2a2af7f7e35cf SHA1 877e86522be3bebf414a40c45cc1d8c5f4279622 SHA256 49a8f9645bdaa04b7d5028d0a85bdc8577a7ec408b37f188a071fa6e32e712ac
+EBUILD imagination-3.0-r1.ebuild 1121 RMD160 6173d30503b2f5d83648192c89a24c29861df528 SHA1 9324b39c4ecd613e69d27ff750b1e6831ea276f4 SHA256 fa0e88e1c59e366f8934391200f421c1b187064e872a70b3aa61ea67a69f3f50
+EBUILD imagination-3.0.ebuild 840 RMD160 22563c81ecd3580cbe85baac14fb1fdfc4128f88 SHA1 45b947c72466fe5c39622e9f6f4c43fe640c1ebf SHA256 5e39489d8327af8ab24604d69f10ff8a62ccd6778ca305ed4260090ec780c3d0
+MISC ChangeLog 868 RMD160 3c04af31f15ba07344f2af908d8c957d3eb87f59 SHA1 c89effcec1b9f4ae18995b0016799d2e4e12c968 SHA256 fb253530c1596d13099964e78d04bd452dcfc6ea617bcb150ef4099c815b3fdc
 MISC metadata.xml 278 RMD160 85ae612f4b725d8857a7fe0808090691c0e58fbd SHA1 c97840692a46e7d54f22bfcfd0a564a8d08033dd SHA256 07a0afc4dfc12865b213ef6815169e0524357989b213ac40bc9436dea94c3160
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk59p6oACgkQfXuS5UK5QB2s9QQAiE2HVe4No3dN1j93fgwCVbNC
-vWgCCWEalrHMWaEZCFkhWTrx1O1StAdPDsgT2VgQNI+56GNL6sC7a5pEnfd3ux8I
-ceWtQpSMCC3XqZB3Aq2YK/If6IUpjEKZWY5h79W8g3GWsyNZBKuDGesxKsgrpcmp
-/PsWDpXI+Lq7zc43GaQ=
-=0wnZ
+iQIcBAEBCgAGBQJPYFkjAAoJEPqDWhW0r/LCDvwP/ig7zpEuKTtN800IeNk2GXed
+uhR99be2HQ3Qv/SXDsvuq7+aeFKxyTOfSWx4oU/w7vsNNOCPT8iMDeioYGzkdWST
+Da1uPhQi7j1QbEnYjbf9NAthGk16i2OlAZc8F7SXH//6ft6MoOGlHc+m99+mcK0h
+IakxAcK5aml7LTLm4bCF0zgS+bLs27JX8PNOY58JL9ws5YHGktoBSGn47Sb24/V+
+ac7yDYVXw6y6b/gyEH/IFYTvWyqdb/n2i0j8wZJj3cFxjtf1lVW0D+qbeZRhQ65u
+0wLevnW0qrMfV9TrnDcKLUMadQahE79b7W0YTIDKqDwF0tbSZ3E5C1n66o1GPvdu
+2Mnr3fxll7LHeIknLYuTpZB9jHIfzuvfJyKsUFOEQBtQ231N3OdA75tJWMM8PBzM
+bsk3f/1z5CNCc3B43WjBAA+qzJJgcVgMhPA5i46UTzC6n4L5vxZYOdaOzj/we5Hv
+mXuY6h8jg8/cijSgVCMKxIQyxy9FVjHmoo4YMNDKKAuoXIieqHEuEvf2gHuEmTtA
+v0o8fYP/aoGGX9GY85z8Wp26FGwXo8KwlsdaWFayidaUEWdnS0Lwmc8Yiwer7Jcv
+wLPI0/fMVS1kU3OmHElNSr3MZVc1mT6w+orqQJdcoOIk1l9ZaXRGk9zKZdpL1Iu8
+UYOcNGpbS4Xus7bDCoLn
+=1ZVm
 -----END PGP SIGNATURE-----
