@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/imagination/imagination-3.0.ebuild,v 1.1 2011/06/23 09:00:01 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/imagination/imagination-3.0.ebuild,v 1.2 2012/03/14 08:41:06 hwoarang Exp $
 
 EAPI="4"
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/${PN}/${PN}/${PV}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64"
+KEYWORDS="~amd64 ~x86"
 IUSE="linguas_cs linguas_de linguas_en_GB linguas_fr linguas_it linguas_pt_BR
 linguas_sv linguas_zh_CN linguas_zh_TW"
 
