@@ -1,6 +1,10 @@
 # ChangeLog for media-video/imagination
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/imagination/ChangeLog,v 1.2 2011/08/27 08:56:21 hwoarang Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/imagination/ChangeLog,v 1.3 2012/03/14 08:41:06 hwoarang Exp $
+
+  14 Mar 2012; Markos Chandras <hwoarang@gentoo.org> imagination-3.0-r1.ebuild,
+  imagination-3.0.ebuild:
+  Add ~x86 keyword. Bug #408111
 
 *imagination-3.0-r1 (27 Aug 2011)
 
